### 0.0.15
image param
video param

### 0.0.14
metric
u18n

### 0.0.13
video
add auto add menu

### 0.0.12
log

### v0.0.11
1. add proxy for telegram and deepseek.
2. add calculating token
3. add /state show token usage

### v0.0.10
1. add thinking mode
2. add ALLOWED_TELEGRAM_USER_IDS param