@@ -59,7 +59,11 @@ func getContentFromHS(prompt string, update tgbotapi.Update, messageChan chan *p
 
 	msgRecords := db.GetMsgRecord(userId)
 	if msgRecords != nil {
-		for i, record := range msgRecords.AQs {
+		aqs := msgRecords.AQs
+		if len(aqs) > 10 {
+			aqs = aqs[len(aqs)-10:]
+		}
+		for i, record := range aqs {
 			if record.Answer != "" && record.Question != "" {
 				logger.Info("context content", "dialog", i, "question:", record.Question, "answer:", record.Answer)
 				messages = append(messages, &model.ChatCompletionMessage{
