@@ -1,6 +1,7 @@
 package main
 
 import (
+	"github.com/yincongcyincong/telegram-deepseek-bot/command"
 	"github.com/yincongcyincong/telegram-deepseek-bot/conf"
 	"github.com/yincongcyincong/telegram-deepseek-bot/db"
 	"github.com/yincongcyincong/telegram-deepseek-bot/logger"
@@ -9,8 +10,9 @@ import (
 )
 
 func main() {
-	conf.InitConf()
 	logger.InitLogger()
+	conf.InitConf()
+	command.LoadCustomCommands()
 	db.InitTable()
 	db.UpdateUserTime()
 	metrics.InitPprof()
